--- a/curso_dev_kotlin/app/src/main/res/layout/activity_main.xml
+++ b/curso_dev_kotlin/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,10 @@
     android:padding="16dp"
     tools:context=".MainActivity">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/dev_android_kotlin"
-        android:textColor="@color/grey"/>
+    <ImageView
+        android:layout_width="256dp"
+        android:layout_height="256dp"
+        android:src="@drawable/ic_money"
+        app:tint="@color/grey" />
 
 </LinearLayout>
