--- a/curso_dev_kotlin/RelativeLayout/app/src/main/res/layout/activity_main.xml
+++ b/curso_dev_kotlin/RelativeLayout/app/src/main/res/layout/activity_main.xml
@@ -4,82 +4,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#08AD7F"
     android:padding="16dp"
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/edit_distance"
+        android:id="@+id/edit_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Distância"
-         />
-
-    <TextView
-        android:layout_centerHorizontal="true"
-        android:id="@+id/text_distance"
-        android:layout_below="@id/edit_distance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Total de quilômetros" />
+        android:layout_marginTop="128dp"
+        android:background="@color/white"
+        android:hint="Email"
+        android:padding="8dp" />
 
     <EditText
-        android:id="@+id/edit_price"
-        android:layout_below="@id/text_distance"
+        android:id="@+id/edit_senha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Preço"
-        />
-
-    <TextView
-        android:layout_centerHorizontal="true"
-        android:id="@+id/text_price"
-        android:layout_below="@id/edit_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Total de quilômetros" />
-
-    <EditText
-        android:id="@+id/edit_autonomy"
-        android:layout_below="@id/text_price"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Autonomia"
-        />
-
-    <TextView
-        android:layout_centerHorizontal="true"
-        android:id="@+id/text_autonomy"
-        android:layout_below="@id/edit_autonomy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Total de quilômetros" />
-
-    <TextView
-        android:layout_centerHorizontal="true"
-        android:id="@+id/text_total_spend"
-        android:layout_below="@id/text_autonomy"
-        android:layout_marginTop="32dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAllCaps="true"
-        android:text="Seu gasto totals será de:" />
-
-    <TextView
-        android:layout_centerHorizontal="true"
-        android:id="@+id/text_total_value"
-        android:layout_below="@id/text_total_spend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAllCaps="true"
-        android:text="R$ 0" />
+        android:layout_below="@id/edit_email"
+        android:layout_marginTop="16dp"
+        android:background="@color/white"
+        android:hint="Senha"
+        android:padding="8dp" />
 
     <Button
-        android:id="@+id/button_calculate"
-        android:layout_marginTop="32dp"
+        android:id="@+id/button_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/text_total_value"
-        android:text="Calcular" />
+        android:layout_below="@id/edit_senha"
+        android:layout_marginTop="32dp"
+        android:backgroundTint="#DADADA"
+        android:padding="16dp"
+        android:text="Login"
+        android:textAllCaps="true"
+        android:textColor="#08AD7F" />
 
+    <TextView
+        android:id="@+id/text_signup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button_login"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="Ainda não é cadastrado? Cadastre-se!"
+        android:textColor="@color/white" />
+
+    <TextView
+        android:id="@+id/text_forget_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:drawableStart="@drawable/ic_support"
+        android:text="Esqueceu sua senha?"
+        android:textSize="15sp" />
 
 </RelativeLayout>
