--- a/curso_dev_kotlin/Motivation/app/src/main/res/layout/activity_user.xml
+++ b/curso_dev_kotlin/Motivation/app/src/main/res/layout/activity_user.xml
@@ -11,17 +11,17 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
         android:fontFamily="@font/cabin"
         android:gravity="center"
-        android:layout_marginTop="64dp"
         android:text="@string/lets_begin"
         android:textColor="@color/white"
         android:textSize="28sp" />
 
     <EditText
+        android:id="@+id/edit_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:fontFamily="@font/cabin"
         android:gravity="center"
         android:layout_centerInParent="true"
