--- a/curso_dev_kotlin/Motivation/app/src/main/res/layout/activity_main.xml
+++ b/curso_dev_kotlin/Motivation/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/cabin"
-        android:text="Olá, Kotlin!"
+        android:text="@string/hello"
         android:textColor="@color/black"
         android:textSize="16sp" />
 
