Banco de dados - Criação

--- a/curso_dev_kotlin/Convidados/app/src/main/res/layout/activity_guest_form.xml
+++ b/curso_dev_kotlin/Convidados/app/src/main/res/layout/activity_guest_form.xml
@@ -29,7 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/text_present"
+        android:text="@string/text_presence"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_name" />
